# job-application-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  cv.example.md  docker-compose.yml  pyproject.toml
scripts/: check_integrations.py
src/job_application_bot/: __init__.py  __main__.py  bot.py  config.py  logging_config.py  pipeline.py  schema.py
src/job_application_bot/ai/: __init__.py  brain.py  model.py
src/job_application_bot/integrations/: __init__.py  crm.py  intake.py  notify.py
src/job_application_bot/prompts/: __init__.py  analysis_system.md  cover_letter_system.md
tests/: test_bot.py  test_brain.py  test_crm.py  test_intake.py  test_model.py  test_pipeline.py
